# wireproxy-rs

./: .pre-commit-config.yaml  Cargo.toml  README.md  justfile  plan.md
.github/workflows/: benchmark.yml  ci.yml  e2e.yml
scripts/: benchmark.sh  benchmark_multi.sh  benchmark_single.sh
src/: app.rs  buffer.rs  config.rs  dns.rs  health.rs  http_proxy.rs  main.rs  netstack.rs  proxy.rs  socks5.rs  target.rs  tunnel.rs  wg.rs
tests/: e2e.rs  http_proxy_protocol.rs  socks5_protocol.rs
tests/fixtures/: test.conf.example
