[package]
name = "wireproxy-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
boringtun = { version = "0.6", features = ["device"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
ipnet = "2.9"
log = "0.4"
rand = "0.8"
httparse = "1.8"
socket2 = "0.5"
smoltcp = { version = "0.11", default-features = false, features = ["std", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp", "socket-icmp"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "io-std", "sync", "signal"] }
trust-dns-proto = "0.23"
