[package]
name = "wireproxy-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
ipnet = "2.9"
ipnetwork = "0.21"
log = "0.4"
rand = "0.9.2"
httparse = "1.8"
parking_lot = "0.12"
socket2 = "0.6.1"
smoltcp = { version = "0.12.0", default-features = false, features = ["std", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp", "socket-icmp"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "io-std", "sync", "signal"] }
hickory-proto = "0.25"
x25519-dalek = { version = "2.0.0", features = ["static_secrets", "reusable_secrets"] }
gotatun = { version = "0.2.0", default-features = false, features = ["device"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30.1", features = ["socket", "uio", "net", "time"] }
